2007-01-23  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA): Use bin's kawa.sh directly.

2007-01-21  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA): Set LD_LIBRARY_PATH if WITH_GCJ.

2007-01-10  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA): Simplify - always use ../bin/kawa-bin.
	(DISABLE_GCJ_COMPILED_KAWA, ENABLE_GCJ_COMPILED_KAWA): Remove macros.

2007-01-03  Per Bothner  <per@bothner.com>

	* classes2.scm (make-TestCapture1): New function, to test for a bug
	reported by Margus Freudenthal <margus@cyber.ee>.
	* obj-test.scm: Call make-TestCapture1.

	* obj-test.scm (make-ClsD)L New function, to check compiled make call.

2006-12-16  Per Bothner  <per@bothner.com>

	* MySAXApp.java: Add printing of line:column numbers.
	* MySAXApp.expected: Update to match.

2006-12-12  Per Bothner  <per@bothner.com>
	    Chris Wegrzyn <chris.wegrzyn@gmail.com>

	* mac-test.scm: Testcase for Savannah bug #18105: "with-syntax causes
	NullPointerException during compilation but not in repl".

2006-12-11  Per Bothner  <per@bothner.com>
	    Margus Freudenthal <margus@cyber.ee>

	* mac-test.scm: New test for Savannah bug #18504.

2006-12-06  Per Bothner  <per@bothner.com>

	* MySAXApp.expected: Fix expected output.

2006-12-05  Per Bothner  <per@bothner.com>

	* Makefile.am (CLEANFILES): Remove all tmp* files.

	* Makefile.m (EXTRA_DIST): Add two more missing files.

2006-12-04  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add two missing files.

2006-11-13  Per Bothner  <per@bothner.com>

	* misc-test.scm: Update and extend test for adding spaces
	between words.

2006-10-26  Per Bothner  <per@bothner.com>

	* misc-test.scm: Updata/update some XmlNamespace tests.

2006-10-14  Per Bothner  <per@bothner.com>
	    Chris Wegrzyn <chris.wegrzyn@gmail.com>

	* mac-test.scm: New test based on Savannah bug #17984 "Compile time
	error in expansion of hygienic macros ending in literals".

2006-09-13  Per Bothner  <per@bothner.com>
